--- a/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
@@ -7,7 +7,7 @@
 
 
     xmlns:bcf="http://brzaskun.com/facelets" xmlns:pe="http://primefaces.org/ui/extensions">
-    <p:tabView id="akordeon"  rendered="#{WpisView.biuroiszef eq true}">
+    <p:tabView id="akordeon"  rendered="#{czyBiuroiSzefView.biuroiszef eq true}">
         <p:tab id="tab2" title="Oblicz PIT" rendered="#{WpisView.ksiegaryczalt}" >
               <h:outputText value="Uwaga podatnik rozlicza się kwartalnie!" style="font-weight: 900; color: red;" rendered="#{WpisView.mc0kw1}"/>
             <h:form id="formpit">
@@ -556,7 +556,7 @@
             </h:form>
         </p:tab>
         <p:tab id="tab6" title="Archiwum PIT">
-            <p:panelGrid columns="4" style="width: 700px" rendered="#{WpisView.ksiegaryczalt and WpisView.biuroiszef eq true}" >
+            <p:panelGrid columns="4" style="width: 700px" rendered="#{WpisView.ksiegaryczalt and czyBiuroiSzefView.biuroiszef eq true}" >
                 <h:form id="formpi" style="width: 500px" >
                     <p:panel header="wybierz rozliczenie wg cech: " style="width: 250px;" rendered="#{pitView.pobranecechypodatnik ne null and pitView.pobranecechypodatnik.size() gt 1}"/>
                     <p:selectOneMenu value="#{pitView.wybranacechadok}" style="width: 250px;"  rendered="#{pitView.pobranecechypodatnik ne null and pitView.pobranecechypodatnik.size() gt 1}" converter="#{cechaConv}">
