--- a/npkpir_23/web/ksiegowaFK/sub/menu/menudokumenty.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/menu/menudokumenty.xhtml
@@ -26,10 +26,10 @@
         <h:outputText value="Niepełne ustawienia danych firmy. Proszę uzupełnić i ponownie się wybrać firmę." style="color: red; font-weight: 900;"/>
     </p:panel>
     <p:outputPanel style="padding: 20px;">
-        <h:outputText value="Blokada wpisu. Klient nie ma wystawionej faktury okresowej" style="color:red;font-size: x-large"  rendered="#{WpisView.biuroiszef eq false}"/>
+        <h:outputText value="Blokada wpisu. Klient nie ma wystawionej faktury okresowej" style="color:red;font-size: x-large"  rendered="#{czyBiuroiSzefView.biuroiszef eq false}"/>
     </p:outputPanel>
     <p:tabView id="menudokumenty"  styleClass="menutabView" orientation="left" style=" height: 500px;width: 600px; box-shadow: 10px 10px 5px #888888; margin-left: 15px; margin-top: 15px;"
-                rendered="#{WpisView.czegosbrakuje == false and WpisView.biuroiszef eq true}">  
+                rendered="#{WpisView.czegosbrakuje == false and czyBiuroiSzefView.biuroiszef eq true}">  
         <p:tab title="dokumenty">
             <h:form id="dialog1menu2">
                 <p:menu id="d1m2" styleClass="d1m" style="width: 400px; text-align: center; height: 450px;">
