--- a/npkpir_23/web/wspolny/sub/ewidencjaprzychodow.xhtml
+++ b/npkpir_23/web/wspolny/sub/ewidencjaprzychodow.xhtml
@@ -25,6 +25,13 @@
              /* ]]> */
         </script>
         <p:growl life="3600"  id="messages" ><p:autoUpdate/></p:growl>
+         <p:panelGrid columns="2">
+        <h:outputText value="okres"/>
+        <p:selectOneMenu id="okresWpisu" value="#{WpisView.okreswpisu}"  style="width: 100px;" converter="#{okresConverter}">
+                <f:selectItems value="#{okresBean.okresylista}" var="ytem" itemLabel="#{ytem.rok}-#{ytem.mc}" itemValue="${ytem}"/>
+                <p:ajax event="change" listener="#{ewidencjaPrzychodowView.aktualizujTabeleTabela}" update=":form:wrapper, westKsiegowa:linki @(.form_southpane)"  global="true"/>
+        </p:selectOneMenu>
+        </p:panelGrid>
         <p:outputPanel id="wrapper"  deferredMode="visible">
              <p:panel id="panelpkpir">
                 <br/>
