--- a/npkpir_23/web/ksiegowa/sub/ksiega.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/ksiega.xhtml
@@ -27,7 +27,13 @@
              /* ]]> */
         </script>
         <p:growl life="3600"  id="messages" ><p:autoUpdate/></p:growl>
-        
+        <p:panelGrid columns="2">
+        <h:outputText value="okres"/>
+        <p:selectOneMenu id="okresWpisu" value="#{WpisView.okreswpisu}"  style="width: 100px;" converter="#{okresConverter}">
+                <f:selectItems value="#{okresBean.okresylista}" var="ytem" itemLabel="#{ytem.rok}-#{ytem.mc}" itemValue="${ytem}"/>
+                <p:ajax event="change" listener="#{ksiegaView.aktualizujTabeleTabela}" update=":form:wrapper westKsiegowa:linki form:cechydokuk @(.form_southpane)"  global="true"/>
+        </p:selectOneMenu>
+        </p:panelGrid>
         <p:outputPanel id="wrapper" >
              <p:panel id="panelpkpir">
                 <p:commandButton  value="Zachowaj w pdf" actionListener="#{ksiegaView.drukujPKPIR()}" >
