--- a/npkpir_23/web/ksiegowa/sub/zmianapodatnika.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/zmianapodatnika.xhtml
@@ -17,13 +17,13 @@
                 <p:selectOneListbox id="podatnikWpisu" value="#{WpisView.podatnikObiekt}" style="width: 350px; height: 250px;" 
                                     converter="#{podatConv}" filter="true" filterMatchMode="contains">
                     <f:selectItems value="#{podatnikWyborView.listaPodatnikowNoFK}" var="p" itemLabel="#{p.nazwapelnaPDF}" itemValue="#{p}"/>
-                    <p:ajax event="change" partialSubmit="true"  listener="#{DokTabView.aktualizujTabele}" update=":westKsiegowa form:panellimity form:wiadnr1 form:wiadomoscfaktury form @(.form_southpane)" global="fasle"/>
-                    <p:ajax event="change" partialSubmit="true"  listener="#{rozrachunkiKlientTaxmanView.pobierzwszystkoKlienta()}" update="form:dokumentyLista" global="fasle"/>
+                    <p:ajax event="change" partialSubmit="true"  listener="#{DokTabView.aktualizujTabele}" update=":westKsiegowa form:panellimity form:wiadnr1 form:wiadomoscfaktury form @(.form_southpane)" global="true"/>
+                    <p:ajax event="change" partialSubmit="true"  listener="#{rozrachunkiKlientTaxmanView.pobierzwszystkoKlienta()}" update="form:dokumentyLista" global="true"/>
                 </p:selectOneListbox>
                 <p:selectOneMenu id="okresWpisu" value="#{WpisView.okreswpisu}"  style="width: 100px;" converter="#{okresConverter}">
                         <f:selectItems value="#{okresBean.okresylista}" var="ytem" itemLabel="#{ytem.rok}-#{ytem.mc}" itemValue="${ytem}"/>
-                        <p:ajax event="change" listener="#{DokTabView.aktualizujTabele}" update=":westKsiegowa form:panellimity form:wiadnr1 form:wiadomoscfaktury"  global="false"/>
-                        <p:ajax event="change" partialSubmit="true"  listener="#{rozrachunkiKlientTaxmanView.pobierzwszystkoKlienta()}" update="form:dokumentyLista @(.form_southpane)" global="fasle"/>
+                        <p:ajax event="change" listener="#{DokTabView.aktualizujTabele}" update=":westKsiegowa form:panellimity form:wiadnr1 form:wiadomoscfaktury"  global="true"/>
+                        <p:ajax event="change" partialSubmit="true"  listener="#{rozrachunkiKlientTaxmanView.pobierzwszystkoKlienta()}" update="form:dokumentyLista @(.form_southpane)" global="true"/>
                 </p:selectOneMenu>
 <!--                <p:selectOneMenu id="rokWpisu" value="#{WpisView.rokWpisu}">
                     <f:selectItems value="#{roki.rokiList}"/>
