--- a/npkpir_23/web/wspolny/sub/layoutEwidencjaPrzychodow/west.xhtml
+++ b/npkpir_23/web/wspolny/sub/layoutEwidencjaPrzychodow/west.xhtml
@@ -12,7 +12,7 @@
             <p:panelGrid id="westKsiegowaWidok" columns="2" style="margin-left: 7%">
                 <h:outputText value="Podatnik:" style="text-shadow: #6374AB 1px -1px 1px"/>
                 <h:outputText value="#{WpisView.podatnikObiekt.nazwapelnaPDF}"/>
-                <h:outputText value="Rok:" style="text-shadow: #6374AB 1px -1px 1px"/>
+<!--                <h:outputText value="Rok:" style="text-shadow: #6374AB 1px -1px 1px"/>
                  <p:selectOneMenu id="rokWpisu" value="#{WpisView.rokWpisu}" style="width: 70px;">
                     <f:selectItems value="#{roki.rokiList}"/>
                     <p:ajax event="change" listener="#{ewidencjaPrzychodowView.aktualizujTabeleTabela}" update=":form:wrapper, westKsiegowa:linki"/>
@@ -21,7 +21,7 @@
                 <p:selectOneMenu id="miesiacWpisu" value="#{WpisView.miesiacWpisu}" style="width: 70px;">
                     <f:selectItems value="#{mce.mceList}"/>
                     <p:ajax event="change" listener="#{ewidencjaPrzychodowView.aktualizujTabeleTabela}" update=":form:wrapper, westKsiegowa:linki"/>
-                </p:selectOneMenu>
+                </p:selectOneMenu>-->
             </p:panelGrid>
            <p:panel id="linki" header="linki">
                   <p:menu >
