--- a/npkpir_23/web/ksiegowa/ksiegowaVATzest.xhtml
+++ b/npkpir_23/web/ksiegowa/ksiegowaVATzest.xhtml
@@ -29,7 +29,7 @@
                     <pe:layoutPane position="center">
                       
                         <h:form id="formVatZestKsiegowa">
-                            <ui:include src="sub/vatzest.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
+                            <ui:include src="./sub/vatzest.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
                         </h:form>
                     </pe:layoutPane>
                 </pe:layout>
