--- a/npkpir_23/web/wspolny/wspolnyjpkVAT.xhtml
+++ b/npkpir_23/web/wspolny/wspolnyjpkVAT.xhtml
@@ -16,8 +16,8 @@
         <p:panel header="wygeneruj JPK VAT MIESIĘCZNY za #{WpisView.miesiacWpisu}/#{WpisView.rokWpisuSt} (wymagana miesięczna deklaracja VAT)" style="width: 1250px;" rendered="#{(WpisView.jpk2020M or WpisView.jpk2020M2) and jpk_VAT2NView.nowa0korekta1 eq false}"/>
         <p:panel header="wygeneruj JPK VAT KWARTALNY za #{WpisView.miesiacWpisu}/#{WpisView.rokWpisuSt} (deklaracja tylko na koniec kwartału, w pozostałe miesiące bez deklaracji)" style="width: 1250px;" rendered="#{(WpisView.jpk2020K or WpisView.jpk2020K2) and jpk_VAT2NView.nowa0korekta1 eq false}"/>
         <p:panelGrid columns="5" rendered="#{WpisView.podatnikObiekt.nip ne '5263158333'}">
-            <p:commandButton value="wyślij jpkfk" actionListener="#{jpk_VAT2NView.przygotujXMLFK()}" update="@form form_dialog_jpk_vat:tabela" style="width: 120px;" rendered="#{jpk_VAT2NView.jpkfk}"/>
-            <p:commandButton value="wyślij korektafk" actionListener="#{jpk_VAT2NView.przygotujXMLFK()}" update="@form form_dialog_jpk_vat:tabela" style="width: 120px;" rendered="#{jpk_VAT2NView.jpkfkkorekta}"/>
+            <p:commandButton value="wyślij jpkfk" actionListener="#{jpk_VAT2NView.przygotujXMLFK()}" update="@form akordeon:form_dialog_jpk_vat:tabela" style="width: 120px;" rendered="#{jpk_VAT2NView.jpkfk}"/>
+            <p:commandButton value="wyślij korektafk" actionListener="#{jpk_VAT2NView.przygotujXMLFK()}" update="@form akordeon:form_dialog_jpk_vat:tabela" style="width: 120px;" rendered="#{jpk_VAT2NView.jpkfkkorekta}"/>
             <p:commandButton value="wyślij jpk" actionListener="#{jpk_VAT2NView.przygotujXML()}" update="@form" style="width: 120px;" rendered="#{jpk_VAT2NView.jpkpkpir}"/>
             <p:commandButton value="wyślij korekta" actionListener="#{jpk_VAT2NView.przygotujXML()}" update="@form" style="width: 120px;" rendered="#{jpk_VAT2NView.jpkpkpirkorekta}"/>
             <p:commandButton value="podgląd jpkfk" actionListener="#{jpk_VAT2NView.przygotujXMLFKPodglad()}" update="@form" style="width: 120px;" rendered="#{jpk_VAT2NView.pkpir0ksiegi1}"/>
