zmiana menu w uproszczoinej. z UPO wyrzucamiy jeden blob

--- a/npkpir_23/web/ksiegowa/ksiegowaNiezaplacone.xhtml
+++ b/npkpir_23/web/ksiegowa/ksiegowaNiezaplacone.xhtml
@@ -25,10 +25,10 @@
                 </h:form>
                 <f:view>
                     <pe:layout fullPage="true" >
-                        <ui:include src="sub/layoutNiezaplacone/north.xhtml"/>  <!-- panel polnocny-->
-                        <ui:include src="sub/layoutNiezaplacone/south.xhtml"/>   <!-- panel poludniowy-->
-                        <ui:include src="sub/layoutNiezaplacone/west.xhtml"/>   <!-- panel zachodni-->
-                        <ui:include src="sub/layoutTablica/east.xhtml"/>   <!-- panel wchodni-->
+                        <ui:include src="sub/layoutKsiega/north.xhtml"/>  <!-- panel polnocny-->
+                        <ui:include src="sub/layoutKsiega/south.xhtml"/>   <!-- panel poludniowy-->
+                        <ui:include src="sub/layoutKsiega/west.xhtml"/>   <!-- panel zachodni-->
+                        <ui:include src="sub/layoutKsiega/east.xhtml"/>   <!-- panel wchodni-->
                         <pe:layoutPane position="center">
                             <h:form id="form">
                                
