--- a/npkpir_23/web/ksiegowa/ksiegowaVATN.xhtml
+++ b/npkpir_23/web/ksiegowa/ksiegowaVATN.xhtml
@@ -16,9 +16,9 @@
             </p:dialog> 
                 <f:view>
                     <pe:layout fullPage="true" >
-                        <ui:include src="sub/layoutVat/north.xhtml"/>  <!-- panel polnocny-->
-                        <ui:include src="sub/layoutVat/south.xhtml"/>   <!-- panel poludniowy-->
-                        <ui:include src="sub/layoutVat/west.xhtml"/>   <!-- panel zachodni-->
+                        <ui:include src="sub/layoutZmianapodatnika/north.xhtml"/>  <!-- panel polnocny-->
+                        <ui:include src="sub/layoutZmianapodatnika/south.xhtml"/>   <!-- panel poludniowy-->
+                        <ui:include src="sub/layoutZmianapodatnika/west.xhtml"/>   <!-- panel zachodni-->
                         <ui:include src="sub/layoutTablica/east.xhtml"/>   <!-- panel wchodni-->
                         <pe:layoutPane position="center">
                             <ui:include src="../wspolny/sub/vatPrzygotowanieDeklaracjiN.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
