--- a/npkpir_23/web/ksiegowa/ksiegowaVAT27.xhtml
+++ b/npkpir_23/web/ksiegowa/ksiegowaVAT27.xhtml
@@ -13,9 +13,9 @@
              
                 <f:view>
                     <pe:layout fullPage="true" >
-                        <ui:include src="sub/layoutVat/north.xhtml"/>  <!-- panel polnocny-->
-                        <ui:include src="sub/layoutVat/south.xhtml"/>   <!-- panel poludniowy-->
-                        <ui:include src="sub/layoutVat/west.xhtml"/>   <!-- panel zachodni-->
+                        <ui:include src="sub/layoutZmianapodatnika/north.xhtml"/>  <!-- panel polnocny-->
+                        <ui:include src="sub/layoutZmianapodatnika/south.xhtml"/>   <!-- panel poludniowy-->
+                        <ui:include src="sub/layoutZmianapodatnika/west.xhtml"/>   <!-- panel zachodni-->
                         <ui:include src="sub/layoutTablica/east.xhtml"/>   <!-- panel wchodni-->
                         <pe:layoutPane position="center">
                             <ui:include src="sub/menu_wiad.xhtml"/>
