--- a/npkpir_23/web/ksiegowa/ksiegowaVATJPK.xhtml
+++ b/npkpir_23/web/ksiegowa/ksiegowaVATJPK.xhtml
@@ -14,9 +14,9 @@
             <bcf:ajaxs/>
                 <f:view>
                     <pe:layout fullPage="true" >
-                        <ui:include src="sub/layoutVat/north.xhtml"/>  <!-- panel polnocny-->
-                        <ui:include src="sub/layoutVat/south.xhtml"/>   <!-- panel poludniowy-->
-                        <ui:include src="sub/layoutVat/west.xhtml"/>   <!-- panel zachodni-->
+                        <ui:include src="sub/layoutZmianapodatnika/north.xhtml"/>  <!-- panel polnocny-->
+                        <ui:include src="sub/layoutZmianapodatnika/south.xhtml"/>   <!-- panel poludniowy-->
+                        <ui:include src="sub/layoutZmianapodatnika/west.xhtml"/>   <!-- panel zachodni-->
                         <ui:include src="sub/layoutTablica/east.xhtml"/>   <!-- panel wchodni-->
                          <h:form>
                              <p:growl life="3600"  id="fifi" ><p:autoUpdate/></p:growl>
