--- a/npkpir_23/web/sub/wyborpodatnikaFKN.xhtml
+++ b/npkpir_23/web/sub/wyborpodatnikaFKN.xhtml
@@ -18,15 +18,10 @@
                     </p:selectOneListbox>
                 </p:column>
             </p:panelGrid>
-            <p:panelGrid columns="3" style="float: right;">
-                <p:column>
-                    <p:selectOneMenu id="rokWpisu" value="#{WpisView.rokWpisu}" style="float: right;">
-                        <f:selectItems value="#{roki.rokiList}"/>
-                    </p:selectOneMenu>
-                </p:column>
-                <p:column >
-                    <p:selectOneMenu id="miesiacWpisu" value="#{WpisView.miesiacWpisu}" style="float: right;">
-                        <f:selectItems value="#{mce.mceListOdKonca}"/>
+            <p:panelGrid columns="2" style="float: right;">
+                    <p:column>
+                     <p:selectOneMenu id="okresWpisu" value="#{WpisView.okreswpisu}"  style="width: 100px;" converter="#{okresConverter}">
+                        <f:selectItems value="#{okresBean.okresylista}" var="ytem" itemLabel="#{ytem.rok}-#{ytem.mc}" itemValue="${ytem}"/>
                     </p:selectOneMenu>
                 </p:column>
                 <p:column >
