--- a/npkpir_23/web/wspolny/sub/layoutKsiega/west.xhtml
+++ b/npkpir_23/web/wspolny/sub/layoutKsiega/west.xhtml
@@ -32,7 +32,7 @@
                     <p:menu >
                         <p:menuitem global="false" value="wpisywanie" rendered="#{!zamkniecieView.moznaksiegowac}"  outcome="ksiegowa" icon="ui-icon-circle-arrow-e" />
                     </p:menu>
-                    <p:menu rendered="#{czyBiuroiSzefView.biuroiszef eq true}">
+                    <p:menu rendered="#{WpisView.biuroiszef eq true}">
                         <p:menuitem global="false" value="wykaz dokumentów"  outcome="dokumentyzaksiegowane" icon="ui-icon-circle-arrow-e"/>
                         <p:menuitem global="false" value="podatkowa ksiega"  outcome="ksiega" icon="ui-icon-circle-arrow-e" rendered="#{WpisView.ksiegaryczalt == true}"/>                         <p:menuitem global="false" value="ewid. przychodów"  outcome="ewidencjaprzychodow" icon="ui-icon-circle-arrow-e" rendered="#{WpisView.ksiegaryczalt == false}"/>
                         <p:menuitem global="false" value="faktury miesieczne"  outcome="fakturymiesieczne" icon="ui-icon-circle-arrow-e"/> 
@@ -48,7 +48,7 @@
                 <p:menu>
                         <p:menuitem global="false" value="niemcy"  outcome="niemcy" icon="ui-icon-circle-arrow-e"/>  
                     </p:menu>
-                   <p:menu rendered="#{czyBiuroiSzefView.biuroiszef eq true}">
+                   <p:menu rendered="#{WpisView.biuroiszef eq true}">
                         <p:menuitem global="false" value="PIT"  outcome="pitoblicz" icon="ui-icon-circle-arrow-e"/>
                         <p:menuitem global="false" value="#{mgs.VAT}" icon="ui-icon-circle-arrow-e" outcome="vatzest" update="westKsiegowa" rendered="#{WpisView.podatnikObiekt.vatokres.size() gt 0 ? true : false}">
                             
