--- a/npkpir_23/web/ksiegowa/ksiegowaZestawienieRok.xhtml
+++ b/npkpir_23/web/ksiegowa/ksiegowaZestawienieRok.xhtml
@@ -21,7 +21,7 @@
                     <pe:layout fullPage="true" >
                         <ui:include src="sub/layoutZestawienie/north.xhtml"/>  <!-- panel polnocny-->
                         <ui:include src="sub/layoutZestawienie/south.xhtml"/>   <!-- panel poludniowy-->
-                        <ui:include src="sub/layoutZestawienie/west.xhtml"/>   <!-- panel zachodni-->
+                        <ui:include src="./sub/layoutZestawienie/west.xhtml"/>   <!-- panel zachodni-->
                         <ui:include src="sub/layoutTablica/east.xhtml"/>   <!-- panel wchodni-->
                         <pe:layoutPane position="center">
                                <ui:include src="sub/menu_wiad.xhtml"/>   <!-- menu contextowe i pole wiadomosci growl-->
