--- a/npkpir_23/web/ksiegowa/sub/pit36.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/pit36.xhtml
@@ -10,7 +10,7 @@
     xmlns:bcf="http://brzaskun.com/facelets" xmlns:pe="http://primefaces.org/ui/extensions">
     <h:form>
     <p:growl life="3600"  id="messages" ><p:autoUpdate/></p:growl>
-    <p:panelGrid id="dodrukupit" columns="1" style="width: 1200px" rendered="#{WpisView.ksiegaryczalt and czyBiuroiSzefView.biuroiszef eq true}" >
+    <p:panelGrid id="dodrukupit" columns="1" style="width: 1200px" rendered="#{WpisView.ksiegaryczalt and WpisView.biuroiszef eq true}" >
                 <p:panel header="zachowane PIT-y: " /><br/>
                 <p:dataTable lazy="false"  id="tablicapit" value="#{pit36View.lista}" var="loop" selectionMode="single"  rowKey="#{loop.id}" sortBy="#{loop.pkpirM}" style="width: 100%;"
                              emptyMessage="Nie zachowano PIT-ow u tego podatnika w danym roku podatkowym">
