--- a/npkpir_23/web/wspolny/sub/faktura/faktura_archiwum.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_archiwum.xhtml
@@ -9,7 +9,7 @@
       
         <h:form id="formarchiwum">
             
-            <p:panelGrid id="panelsum1" columns="4" rendered="#{czyBiuroiSzefView.biuroiszef eq true}">
+            <p:panelGrid id="panelsum1" columns="4" rendered="#{WpisView.biuroiszef eq true}">
                 <f:facet name="header">
                     <p:row>
                     <p:column>
@@ -42,7 +42,7 @@
                 </p:row>
             </p:panelGrid>
             <p:panel header="">
-                <p:commandButton value="drukuj zestawienie" actionListener="#{fakturaView.drukujfakturyarchiwum}" style="width: 150px; margin-left: 30px;" rendered="#{czyBiuroiSzefView.biuroiszef eq true}"/>
+                <p:commandButton value="drukuj zestawienie" actionListener="#{fakturaView.drukujfakturyarchiwum}" style="width: 150px; margin-left: 30px;" rendered="#{WpisView.biuroiszef eq true}"/>
             </p:panel>
             <p:dataTable lazy="false"  id="dokumentyArchiwum" value="#{fakturaView.fakturyarchiwum}" var="wpis"  rowIndexVar="row"  filteredValue="#{fakturaView.fakturyFilteredarchiwum}"
                          selection="#{fakturaView.gosciwybralarchiuwm}" rowKey="#{wpis.numerkolejny}" widgetVar="archTable" rowSelectMode="add" style="max-width: 1400px;height: 900px;overflow-y: scroll;"
@@ -88,10 +88,10 @@
                           filterMatchMode="contains" filterStyle="display : none;" width="60">
                     <h:outputText value="#{wpis.terminzaplaty.substring(2)}"/>
                 </p:column>
-                 <p:column headerText="netto"  sortBy="#{wpis.nettoFakturaView}" filterBy="#{wpis.nettoFakturaView}" filterMatchMode="contains" filterStyle="display : none;"  width="70" rendered="#{czyBiuroiSzefView.biuroiszef eq true}">
+                 <p:column headerText="netto"  sortBy="#{wpis.nettoFakturaView}" filterBy="#{wpis.nettoFakturaView}" filterMatchMode="contains" filterStyle="display : none;"  width="70" rendered="#{WpisView.biuroiszef eq true}">
                     <bcf:outputpl value="#{wpis.nettoFakturaView}"/>
                 </p:column>
-                <p:column headerText="brutto"  sortBy="#{wpis.bruttoFakturaView}" filterBy="#{wpis.bruttoFakturaView}" filterMatchMode="contains" filterStyle="display : none;"  width="70" rendered="#{czyBiuroiSzefView.biuroiszef eq true}">
+                <p:column headerText="brutto"  sortBy="#{wpis.bruttoFakturaView}" filterBy="#{wpis.bruttoFakturaView}" filterMatchMode="contains" filterStyle="display : none;"  width="70" rendered="#{WpisView.biuroiszef eq true}">
                     <bcf:outputpl value="#{wpis.bruttoFakturaView}"/>
                     <h:outputText value=" #{wpis.walutafaktury}" rendered="#{wpis.walutafaktury ne 'PLN'}"/>
                     <bcf:outputpl value="#{wpis.bruttoFakturaViewPLN}" rendered="#{wpis.walutafaktury ne 'PLN'}"/>
