--- a/npkpir_23/web/wspolny/sub/layoutEwidencjaPrzychodow/west.xhtml
+++ b/npkpir_23/web/wspolny/sub/layoutEwidencjaPrzychodow/west.xhtml
@@ -29,10 +29,10 @@
                         <p:menuitem global="false" value="info podatnik"  outcome="info" icon="ui-icon-circle-arrow-e" />
                         <p:menuitem global="false" value="parametry" outcome="parampodatnika" icon="ui-icon-circle-arrow-e" />
                     </p:menu>
-                    <p:menu  rendered="#{czyBiuroiSzefView.biuroiszef eq true}">
+                    <p:menu  rendered="#{WpisView.biuroiszef eq true}">
                         <p:menuitem global="false" value="wpisywanie" rendered="#{!zamkniecieView.moznaksiegowac}"  outcome="ksiegowa" icon="ui-icon-circle-arrow-e" />
                     </p:menu>
-                    <p:menu rendered="#{czyBiuroiSzefView.biuroiszef eq true}">
+                    <p:menu rendered="#{WpisView.biuroiszef eq true}">
                         <p:menuitem global="false" value="wykaz dokumentów"  outcome="dokumentyzaksiegowane" icon="ui-icon-circle-arrow-e"/>
                         <p:menuitem global="false" value="podatkowa ksiega"  outcome="ksiega" icon="ui-icon-circle-arrow-e" rendered="#{WpisView.ksiegaryczalt == true}"/>                         
                         <p:menuitem global="false" value="ewid. przychodów"  outcome="ewidencjaprzychodow" icon="ui-icon-circle-arrow-e" rendered="#{WpisView.ksiegaryczalt == false}"/>
@@ -46,7 +46,7 @@
                     <p:menu>
                         <p:menuitem global="false" value="środki trwałe"  outcome="srodki" icon="ui-icon-circle-arrow-e"/>  
                     </p:menu>
-                   <p:menu rendered="#{czyBiuroiSzefView.biuroiszef eq true}">
+                   <p:menu rendered="#{WpisView.biuroiszef eq true}">
                         <p:menuitem global="false" value="PIT"  outcome="pitoblicz" icon="ui-icon-circle-arrow-e"/>
                         <p:menuitem global="false" value="#{mgs.VAT}" icon="ui-icon-circle-arrow-e" outcome="vatzest" update="westKsiegowa" rendered="#{WpisView.podatnikObiekt.vatokres.size() gt 0 ? true : false}">
                             
