--- a/npkpir_23/web/wspolny/sub/layoutFakturaKsiegowa/west.xhtml
+++ b/npkpir_23/web/wspolny/sub/layoutFakturaKsiegowa/west.xhtml
@@ -31,7 +31,7 @@
                 <p:menu >
                     <p:menuitem value="wpisywanie" rendered="#{!zamkniecieView.moznaksiegowac}"  outcome="ksiegowa" icon="ui-icon-circle-arrow-e" />
                 </p:menu>
-                <p:menu rendered="#{czyBiuroiSzefView.biuroiszef eq true}">
+                <p:menu rendered="#{WpisView.biuroiszef eq true}">
                     <p:menuitem value="wykaz dokumentów"  outcome="dokumentyzaksiegowane" icon="ui-icon-circle-arrow-e"/>
                     <p:menuitem value="podatkowa ksiega"  outcome="ksiega" icon="ui-icon-circle-arrow-e" />
                     <p:menuitem value="faktury miesieczne"  outcome="fakturymiesieczne" icon="ui-icon-circle-arrow-e"/> 
@@ -43,10 +43,10 @@
                 <p:menu>
                     <p:menuitem value="środki trwałe"  outcome="srodki" icon="ui-icon-circle-arrow-e"/>  
                 </p:menu>
-                  <p:menu rendered="#{czyBiuroiSzefView.biuroiszef eq true}">
+                  <p:menu rendered="#{WpisView.biuroiszef eq true}">
                         <p:menuitem global="false" value="niemcy"  outcome="niemcy" icon="ui-icon-circle-arrow-e"/>  
                     </p:menu>
-                <p:menu rendered="#{czyBiuroiSzefView.biuroiszef eq true}">
+                <p:menu rendered="#{WpisView.biuroiszef eq true}">
                     <p:menuitem value="PIT"  outcome="pitoblicz" icon="ui-icon-circle-arrow-e"/>
                     <p:menuitem value="#{mgs.VAT}" icon="ui-icon-circle-arrow-e" action="#{ewidencjaVatView.przekierowanieEwidencji()}" update="westWpis" rendered="#{WpisView.podatnikObiekt.vatokres.size() gt 0 ? true : false}">
                         <f:actionListener binding="#{ewidencjaVatView.stworzenieEwidencjiZDokumentow(WpisView.podatnikObiekt)}"/>
