--- a/npkpir_23/web/ksiegowa/sub/obroty.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/obroty.xhtml
@@ -57,7 +57,7 @@
                 <h:outputText value="#{wpis.dataWyst.substring(2,10)}">
                 </h:outputText>
             </p:column>
-            <p:column id="kontrColumn" width="270" headerText="#{mgs.kontrahent}" filterBy="#{wpis.kontr.npelna}" filterMatchMode="contains" sortBy="#{wpis.kontr.npelna}" style="width: 14%;">  
+            <p:column id="kontrColumn" width="270" headerText="#{mgs.kontrahent}" filterBy="#{wpis.kontr.nazwabezCudzy}" filterMatchMode="contains" sortBy="#{wpis.kontr.nazwabezCudzy}" style="width: 14%;">  
                  <f:facet name="filter">
                      <p:selectOneMenu style="width: 250px;" filter="true"  filterMatchMode="contains" onchange="PF('dokTable').filter()" >
                          <f:selectItem itemLabel="wybierz kontrahenta" itemValue="#{null}" noSelectionOption="true"/>
@@ -65,7 +65,7 @@
                         <p:ajax event="change" listener="#{obrotyView.czyscwybrane}" update=":formX:podsumowaniewybr :formX:podsumowaniewybrnetto :formX:dokumentyLista"/>
                     </p:selectOneMenu>
                 </f:facet>
-                <h:outputText value="#{wpis.kontr.npelna}"  />
+                <h:outputText value="#{wpis.kontr.nazwabezCudzy}"  />
             </p:column>
             <p:column id="rodzTrColumn" headerText="rodzaj trans" filterBy="#{wpis.rodzajedok.rodzajtransakcji}" filterMatchMode="exact" filterStyle="display: none;" sortBy="#{wpis.rodzajedok.rodzajtransakcji}" style="width: 9%; text-align: center;">  
                 <f:facet name="filter">
