--- a/npkpir_23/web/wspolny/sub/vatwyslane.xhtml
+++ b/npkpir_23/web/wspolny/sub/vatwyslane.xhtml
@@ -5,7 +5,7 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:bcf="http://brzaskun.com/facelets" xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <h:form id="formwyslane" >
+    <h:form id="formwyslane" class="formwyslanevat">
         <p:growl life="3600"  id="msg"/>
         <p:panel header="Wykaz wysłanych deklaracji."/>
         <p:tabView id="akordeon">
